Added a traits base class for zope.schema.Object fields

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -15,6 +15,11 @@ scripts =
     js/page.js
     vendor/mustache.js/mustache.js
 
+datepicker =
+    vendor/bootstrap-datepicker/js/bootstrap-datepicker.js
+    vendor/bootstrap-datepicker/css/datepicker.css
+    js/datepicker.js
+
 spatial-edit =
     js/package/spatial-edit.js
 
