Added widgets for Date, Datetime, Time fields

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -20,6 +20,16 @@ datepicker =
     vendor/bootstrap-datepicker/css/datepicker.css
     js/datepicker.js
 
+datetimepicker =
+    vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js
+    vendor/bootstrap-datetimepicker/css/datetimepicker.css
+    js/datetimepicker.js
+
+timepicker =
+    vendor/bootstrap-timepicker/js/bootstrap-timepicker.js
+    vendor/bootstrap-timepicker/css/bootstrap-timepicker.css
+    js/timepicker.js
+
 spatial-edit =
     js/package/spatial-edit.js
 
