Added an example javascript module (edit dict-based collections)

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -13,7 +13,8 @@ styles =
     css/widgets.css
 
 scripts = 
-    js/page.js
+    js/main.js
+    js/select2.js
     vendor/mustache.js/mustache.js
 
 datepicker =
@@ -43,4 +44,5 @@ form-autofiller =
 foo =
     js/package/foo.js
 
-
+scratch = 
+    js/scratch.js
