--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -14,35 +14,35 @@ styles =
 
 scripts = 
     js/main.js
-    js/select2.js
+    js/modules/select2.js
     vendor/mustache.js/mustache.js
 
 datepicker =
     vendor/bootstrap-datepicker/js/bootstrap-datepicker.js
     vendor/bootstrap-datepicker/css/datepicker.css
-    js/datepicker.js
+    js/modules/datepicker.js
 
 datetimepicker =
     vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js
     vendor/bootstrap-datetimepicker/css/datetimepicker.css
-    js/datetimepicker.js
+    js/modules/datetimepicker.js
 
 timepicker =
     vendor/bootstrap-timepicker/js/bootstrap-timepicker.js
     vendor/bootstrap-timepicker/css/bootstrap-timepicker.css
-    js/timepicker.js
+    js/modules/timepicker.js
 
 spatial-edit =
-    js/package/spatial-edit.js
+    js/modules/spatial-edit.js
 
 spatial-query =
-    js/package/spatial-query.js
+    js/modules/spatial-query.js
 
 form-autofiller = 
-    js/form-autofiller.js
+    js/modules/form-autofiller.js
 
-foo =
-    js/package/foo.js
+dataset-foo =
+    js/modules/dataset-foo.js
 
 scratch = 
     js/scratch.js
