Refactored javascript widgets for collection-based fields (use jQuery-Ui widget factory)

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -6,6 +6,10 @@
 
 [depends]
 
+scratch = 
+    vendor/mustache.js/mustache.js
+    js/main.js
+
 [groups]
 
 styles =
@@ -13,9 +17,9 @@ styles =
     css/widgets.css
 
 scripts = 
+    vendor/mustache.js/mustache.js
     js/main.js
     js/modules/select2.js
-    vendor/mustache.js/mustache.js
 
 datepicker =
     vendor/bootstrap-datepicker/js/bootstrap-datepicker.js
