Moved jquery plugins to a separate folder

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -36,6 +36,10 @@ timepicker =
     vendor/bootstrap-timepicker/css/bootstrap-timepicker.css
     js/modules/timepicker.js
 
+item-editor = 
+    js/plugins/jquery-ui.item-editor.js
+    js/modules/item-editor.js
+
 spatial-edit =
     js/modules/spatial-edit.js
 
