--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -49,8 +49,8 @@ spatial-query =
 form-autofiller = 
     js/modules/form-autofiller.js
 
-dataset-foo =
-    js/modules/dataset-foo.js
+form-linked-fields = 
+    js/modules/form-linked-fields.js
 
 scratch = 
     js/scratch.js
