--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -19,7 +19,7 @@ styles =
 scripts = 
     vendor/mustache.js/mustache.js
     js/main.js
-    js/modules/select2.js
+    js/modules/select.js
 
 datepicker =
     vendor/bootstrap-datepicker/js/bootstrap-datepicker.js
