Created widgets for thesaurus terms

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -52,5 +52,8 @@ form-autofiller =
 form-linked-fields = 
     js/modules/form-linked-fields.js
 
+thesaurus-terms = 
+    js/modules/thesaurus-terms.js
+
 scratch = 
     js/scratch.js
