Fixed bug with empty linked fields (creation, 3rd stage)

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -46,11 +46,11 @@ spatial-edit =
 spatial-query =
     js/modules/spatial-query.js
 
-form-autofiller = 
-    js/modules/form-autofiller.js
+package-form-autofiller = 
+    js/modules/package-form-autofiller.js
 
-form-linked-fields = 
-    js/modules/form-linked-fields.js
+package-form-linked-fields = 
+    js/modules/package-form-linked-fields.js
 
 thesaurus-terms = 
     js/modules/thesaurus-terms.js
