Created a simple widget to assist editing a bounding-box

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -55,5 +55,8 @@ package-form-linked-fields =
 thesaurus-terms = 
     js/modules/thesaurus-terms.js
 
+geographic-bbox = 
+    js/modules/geographic-bbox.js
+
 scratch = 
     js/scratch.js
