--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -55,8 +55,11 @@ package-form-linked-fields =
 thesaurus-terms = 
     js/modules/thesaurus-terms.js
 
-geographic-bbox = 
+geographic-bbox =
     js/modules/geographic-bbox.js
+
+spatial-resolution =
+    js/modules/spatial-resolution.js
 
 scratch = 
     js/scratch.js
