Refactored package XML imports (#35, wip)

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -6,6 +6,13 @@
 
 [depends]
 
+metadata-source =
+    vendor/fileupload
+
+upload =
+    vendor/mustache.js/mustache.js
+    vendor/jquery-fileupload/jquery.iframe-transport.js
+
 scratch = 
     vendor/mustache.js/mustache.js
     js/main.js
@@ -60,6 +67,15 @@ geographic-bbox =
 
 spatial-resolution =
     js/modules/spatial-resolution.js
+
+metadata-source = 
+    js/modules/metadata-source.js
+
+upload =
+    js/modules/upload.js
+
+show-dataset-name = 
+    js/show-dataset-name.js
 
 scratch = 
     js/scratch.js
