--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -61,5 +61,8 @@ geographic-bbox =
 spatial-resolution =
     js/modules/spatial-resolution.js
 
+inject-dialog =
+    js/modules/inject-dialog.js
+
 scratch = 
     js/scratch.js
