--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -61,8 +61,8 @@ geographic-bbox =
 spatial-resolution =
     js/modules/spatial-resolution.js
 
-inject-dialog =
-    js/modules/inject-dialog.js
+ingest-dialog =
+    js/modules/ingest-dialog.js
 
 scratch = 
     js/scratch.js
