--- a/ckanext/publicamundi/storers/vector/public/resource.config
+++ b/ckanext/publicamundi/storers/vector/public/resource.config
@@ -16,11 +16,11 @@ export =
     vendor/jquery-ui-autocomplete/jquery-ui.js
     vendor/jquery-ui-autocomplete/jquery-ui.css
     js/modules/export.js
-  
 
 styles=
    css/vectorstorer.css
-vector_inject = 
-   js/modules/vector-inject.js
+
+vector_ingest = 
+   js/modules/vector-ingest.js
 
 
