Changed structure of export.js. Added projection autocomplete javascript module

--- a/ckanext/publicamundi/storers/vector/public/resource.config
+++ b/ckanext/publicamundi/storers/vector/public/resource.config
@@ -13,9 +13,13 @@ dialog =
    css/vectorstorer.css
 
 export =
+    js/modules/export.js
+
+projection_autocomplete =   
     vendor/jquery-ui-autocomplete/jquery-ui.js
     vendor/jquery-ui-autocomplete/jquery-ui.css
-    js/modules/export.js
+    js/modules/projection-autocomplete.js
+    css/vectorstorer.css 
 
 styles=
    css/vectorstorer.css
