--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -52,6 +52,10 @@ package-form-autofiller =
 package-form-linked-fields = 
     js/modules/package-form-linked-fields.js
 
+table-collapsible-rows = 
+    vendor/mustache.js/mustache.js
+    js/modules/table-collapsible-rows.js
+
 thesaurus-terms = 
     js/modules/thesaurus-terms.js
 
