--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -16,6 +16,9 @@ styles =
     css/main.css
     css/widgets.css
 
+analytics = 
+    js/analytics.js
+
 scripts = 
     vendor/mustache.js/mustache.js
     js/main.js
