added front page slider and dataset search facets sorting

--- a/ckanext/publicamundi/themes/geodata/public/resource.config
+++ b/ckanext/publicamundi/themes/geodata/public/resource.config
@@ -14,3 +14,9 @@ styles =
 scripts = 
     js/main.js
 
+facets = 
+    js/facets.js
+
+jssor = 
+    jssor/js/jssor.slider.mini.js
+    js/slider.js
