several template improvements

--- a/ckanext/publicamundi/themes/geodata/public/resource.config
+++ b/ckanext/publicamundi/themes/geodata/public/resource.config
@@ -13,10 +13,11 @@ styles =
 
 scripts = 
     js/main.js
+    js/jquery.cookie.js
 
 facets = 
     js/facets.js
 
 jssor = 
-    jssor/js/jssor.slider.mini.js
+    js/jssor/js/jssor.slider.mini.js
     js/slider.js
