--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ zope.schema==4.4
 zope.component==4.1
 zope.dottedname
 z3c.schema
-owslib==0.8.8
+owslib>=0.8.10
 pycsw==1.10.0
 inflection
 unidecode
