--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ zope.component==4.1
 zope.dottedname
 z3c.schema
 owslib>=0.8.10
-pycsw==1.10.0
 inflection
 unidecode
 pytz
 isodate
 dictdiffer
 pytidylib
+-e git+https://github.com/PublicaMundi/pycsw.git@dev.publicamundi.eu#egg=pycsw
