Refactored Style Controller. Changed style editing for WMS Resources to bootstrap popup

--- a/ckanext/publicamundi/storers/vector/public/resource.config
+++ b/ckanext/publicamundi/storers/vector/public/resource.config
@@ -7,6 +7,13 @@ sld_editor =
     vendor/codemirror-4.3/mode/xml/xml.js
     js/modules/sld_editor.js
 
+style_editor = 
+   js/modules/style-editor.js
+   vendor/codemirror-4.3/lib/codemirror.css
+   vendor/codemirror-4.3/lib/codemirror.js
+   vendor/codemirror-4.3/mode/xml/xml.js
+   js/modules/sld_editor.js
+
 dialog =
    js/modules/export-dialog.js
    vendor/jquery-ui-autocomplete/jquery-ui.css
