--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -75,6 +75,10 @@ upload =
     vendor/mustache.js/mustache.js
     js/modules/upload.js
 
+resource-metadata = 
+    vendor/moment/1.6.2/moment.js
+    js/modules/resource-metadata.js
+
 show-dataset-name = 
     js/show-dataset-name.js
 
