Added encoding and projection (EPSG Code) validation in ingestion workflow.

--- a/ckanext/publicamundi/storers/vector/public/resource.config
+++ b/ckanext/publicamundi/storers/vector/public/resource.config
@@ -1,3 +1,4 @@
+[depends]
 
 [groups]
 
@@ -24,14 +25,21 @@ export =
 
 projection_autocomplete =   
     vendor/jquery-ui-autocomplete/jquery-ui.js
-    vendor/jquery-ui-autocomplete/jquery-ui.css
     js/modules/projection-autocomplete.js
-    css/vectorstorer.css 
+
+encoding_autocomplete =   
+    vendor/jquery-ui-autocomplete/jquery-ui.js
+    
+    js/modules/encoding-autocomplete.js
 
 styles=
    css/vectorstorer.css
+   vendor/jquery-ui-autocomplete/jquery-ui.css
+
 
 vector_ingest = 
+   vendor/jquery-validator/validate.js
    js/modules/vector-ingest.js
+
 
 
