minor style changes

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -78,8 +78,8 @@ upload =
 show-dataset-name = 
     js/show-dataset-name.js
 
-scratch = 
-    js/scratch.js
+#scratch = 
+#    js/scratch.js
 
 download_options = 
     js/download_options_dialog.js
