--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -82,8 +82,8 @@ resource-metadata =
 show-dataset-name = 
     js/show-dataset-name.js
 
-scratch = 
-    js/scratch.js
+#scratch = 
+#    js/scratch.js
 
 download_options = 
     js/download_options_dialog.js
