--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,7 @@ pytz
 isodate
 dictdiffer
 pytidylib
+pillow
+wheezy.captcha
 -e git+https://github.com/PublicaMundi/owslib.git@dev.publicamundi.eu#egg=owslib
 -e git+https://github.com/PublicaMundi/pycsw.git@dev.publicamundi.eu#egg=pycsw
