added new maps js functionality and refactored controller/db communication

--- a/ckanext/publicamundi/themes/geodata/public/resource.config
+++ b/ckanext/publicamundi/themes/geodata/public/resource.config
@@ -26,10 +26,10 @@ slider =
 maps-admin = 
     js/fancytree/jquery-ui.js
     js/fancytree/jquery.ui-contextmenu.js
-
     js/fancytree/jquery.fancytree.js
     js/fancytree/src/jquery.fancytree.edit.js
     js/fancytree/src/jquery.fancytree.dnd.js
+    js/fancytree/src/jquery.fancytree.glyph.js
     js/fancytree/src/jquery.fancytree.table.js
     js/fancytree/src/jquery.fancytree.gridnav.js
     js/maps-admin.js
