Manipulate dataset translations with a table widget

--- a/ckanext/publicamundi/public/resource.config
+++ b/ckanext/publicamundi/public/resource.config
@@ -21,6 +21,10 @@ scripts =
     js/main.js
     js/modules/select.js
 
+bootstrap-toggle = 
+    vendor/bootstrap-toggle/js/bootstrap-toggle.js
+    vendor/bootstrap-toggle/css/bootstrap-toggle.css
+
 datepicker =
     vendor/bootstrap-datepicker/js/bootstrap-datepicker.js
     vendor/bootstrap-datepicker/css/datepicker.css
@@ -78,6 +82,14 @@ upload =
 resource-metadata = 
     vendor/moment/1.6.2/moment.js
     js/modules/resource-metadata.js
+
+package-translation = 
+    vendor/mustache.js/mustache.js
+    js/modules/package-translation-panel.js
+    js/modules/package-translatable-field.js
+
+package-translatable-field = 
+    js/modules/package-translatable-field.js
 
 show-dataset-name = 
     js/show-dataset-name.js
