analytics saved to database

--- a/ckanext/publicamundi/analytics/public/resource.config
+++ b/ckanext/publicamundi/analytics/public/resource.config
@@ -6,6 +6,8 @@ libs =
     vendor/amcharts/amcharts/serial.js
     vendor/flanchejs.js
     vendor/openlayers3/ol.js
+    vendor/datepicker.js
+
 
 src =
    js/HAParserAmCharts_concat.js
@@ -14,3 +16,4 @@ src =
 styles=
    css/style.css
    css/ol.css
+   css/datepicker.css
